--- a/Raport/Raport.tex
+++ b/Raport/Raport.tex
@@ -26,7 +26,7 @@
 \usepackage{hyperref}
 \usepackage{endnotes}
 
-\lstdefinestyle{sharpc}{language=[Sharp]C, frame=lr, rulecolor=\color{blue!80!black}}
+\lstdefinestyle{sharpc}{language=[Sharp]C, frame=lr, rulecolor=\color{blue!80!black},  tabsize=2}
 
 \lstdefinelanguage{CSharp}
 {
@@ -146,7 +146,7 @@ Podstawową jednostką danych był album zdjęć - każdy z nich posiadał zesta
 Po rozbiciu na znaki/słowa, tekst zawarty w nazwach, opisach i podpisach został dodatkowo zaszyfrowany w celach anonimowości. Ostatecznie pola w kolumnach \textit{name}, \textit{caption} oraz \textit{description} podane zostały jako listy liczb całkowitych (każda określająca inny znak/ciąg znaków, wyłączając tzw. "Znaki stopu"). \\
 
 Organizator konkursu dostarczył dwa zestawy danych w formacie .csv - treningowy zestaw train.csv posiadający wypełnione informacje w kolumnie \textit{good} oraz zestaw do ewaluacji - test.train nie posiadający informacji o jakości zdjęć albumów.
-Naszym zadaniem było wykorzystać algorytm z dziedziny machine learning, aby na podstawie danych treningowych określić czy albumy, których metadane znajdujące się w pliku test.csv, zostałyby pozytywnie ocenione przez ludzkiego ewaluatora. Dane wynikowe również miały być przechowywane w pliku .csv posiadającym tylko 2 kolumny: id albumu oraz ocenę. Zdecydowaliśmy się dodać również możliwość podania przez użytkownika własnych danych - w takim przypadku informacja o przewidywanej jakości albumu ma zostać wyświetlona w głównym oknie aplikacji. \\
+Naszym zadaniem było wykorzystać algorytm z dziedziny machine learning, aby na podstawie danych treningowych określić, czy albumy których metadane znajdują się w pliku test.csv zostałyby pozytywnie ocenione przez ludzkiego ewaluatora. Dane wynikowe również miały być przechowywane w pliku .csv posiadającym tylko 2 kolumny: id albumu oraz ocenę. Zdecydowaliśmy się dodać również możliwość podania przez użytkownika własnych danych - w takim przypadku informacja o przewidywanej jakości albumu ma zostać wyświetlona w głównym oknie aplikacji. \\
 
 Podczas etapu projektowania zdecydowaliśmy się połączyć 2 różne technologie: język programowania C\# wraz z frameworkiem .NET został wykorzystany do stworzenia graficznego interfejsu użytkownika, natomiast do implementacji algorytmu wykorzystaliśmy język R do obliczeń statystycznych. Aby środowisko programistyczne Visual Studio 2012 miał możliwość wykonywania skryptów napisanych w R, konieczne było użycie biblioteki R.NET, pozwalającej tworzyć sesje R w .NET.
 
@@ -179,40 +179,39 @@ Drugą przydatną instrukcją jest przypisanie do commandArgs polecenia function
 public int launchScript(string scriptName, bool hasArguments,
 params string[] arg)
 {
- try
-  {
-    if (engine != null)
-    {
-     if (hasArguments)
-     {
-      string arguments = arg[0].ToString();
+	try
+	{
+	    if (engine != null)
+	    {
+		     if (hasArguments)
+			     {
+				      string arguments = arg[0].ToString();
 
-      for (int i = 1; i < arg.Length; i++)
-      arguments += ("," + arg[i].ToString());
+				      for (int i = 1; i < arg.Length; i++)
+				      arguments += ("," + arg[i].ToString());
 
-      engine.Evaluate("commandArgs <- function() c(" + arguments + ")");                        
-     }
+				      engine.Evaluate("commandArgs <- function() c("+arguments+")");                        
+			     }
 
-     if (scriptName.Contains(".R"))
-     engine.Evaluate("source('" + scriptName + "')");
-     else
-     {
-      engine.Evaluate("source('" + scriptName + ".R')");
-     }
-    }
+		     if (scriptName.Contains(".R"))
+			     engine.Evaluate("source('" + scriptName + "')");
+		     else
+		     {
+			      engine.Evaluate("source('" + scriptName + ".R')");
+		     }
+	    }
 
-    if (scriptName.Contains("User"))
-    {
-     IntegerVector result = engine.GetSymbol("userResult").AsInteger();
-     return result[0];
-    }
-
-  }
- catch (EvaluationException)
- {
-  throw new EvaluationException("Brak pliku");
- }
- return -1;
+	    if (scriptName.Contains("User"))
+	    {
+		     IntegerVector result = engine.GetSymbol("userResult").AsInteger();
+		     return result[0];
+	    }
+	}
+	 catch (EvaluationException)
+	 {
+		  throw new EvaluationException("Brak pliku");
+	 }
+	return -1;
 }
 \end{lstlisting}
 
@@ -307,7 +306,7 @@ train$proportions[(train$width / train$height) >= 1.55] <- '> 3:2'
 train$resolution <- as.integer(sqrt(train$height^2 + train$width^2))
 \end{lstlisting} 
 
-Ważnym elementem było zadeklarowanie atrybutów \textit{Continent} i \textit{proportions} jako typ factor (podobny do spotykanego w większości języków programowania typu Enumerable) - w przeciwnym wypadku wartości w tych kolumnach byłyby odbierane jako zwykły tekst. W przypadku, gdy jako źródło danych wybrano własne dane, uruchamiany jest również skrypt \textit{LoadUserRecord.R}, który odczytuje dane z linii poleceń, a następnie generuje dodatkowe atrybuty wzorem dal nowego rekordu (podobna procedura jak w \textit{ExtraColumns.R}). \\
+Ważnym elementem było zadeklarowanie atrybutów \textit{Continent} i \textit{proportions} jako typ factor (podobny do spotykanego w większości języków programowania typu Enumerable) - w przeciwnym wypadku wartości w tych kolumnach byłyby odbierane jako zwykły tekst. W przypadku, gdy jako źródło danych wybrano własne dane, uruchamiany jest również skrypt \textit{LoadUserRecord.R}, który odczytuje dane z linii poleceń, a następnie generuje dodatkowe atrybuty dla nowego rekordu wzorem \textit{ExtraColumns.R}. \\
 
 \begin{lstlisting}[language=R]
 args=(commandArgs())
@@ -361,7 +360,7 @@ Po wykonaniu wszystkich poleceń otrzymujemy plik wynikowy w folderze "CSV", nat
 Do zakodowania algorytmów użyliścmy dwóch różnych pakietów (odpowiedniki bibliotek dla języka R): "randomForest"\footnote{\url{http://cran.r-project.org/web/packages/randomForest/randomForest.pdf}} oraz "party" \footnote{\url{http://cran.r-project.org/web/packages/party/party.pdf}}. Doboru dokonaliśmy na podstawie popularności rozwiązań stosowanych przez uczestników konkursów kaggle'a. \\
 
 Oba pakiety wdrażają algorytm lasów losowych, który z kolei oparty jest na drzewach decyzyjnych (i to na ich poziomie pojawiają się różnice w implementacji). Drzewo decyzyjne jest podobne do drzewiastej struktury danych, gdzie rolę węzłów stanowią miejsca rozszczepienia danych.
-W pakiecie "randomForest" Algorytm rozpoczyna swoje działanie w punkcie początkowym, tak zwanym korzeniu ze wszystkimi danymi treningowymi. Następnie przeszukuje wszystkie zmienne (atrybuty), aby wybrać tę, według której najlepiej dokonać podziału. W każdym węźle (za wyjątkiem punktów końcowych - liści) następuje podział na 2 węzły podrzędne. Selekcja dokonywana jest na podstawie "klarowności" (ang. \textit{purity}) węzłów  podzielonych danych - jeden z nich musi mieć jak największy procent jedynek poszukiwanej danej, drugi jak największą ilość zer. Przykładowy fragment takiego drzewa zobrazowany jest poniżej.
+W pakiecie "randomForest" algorytm rozpoczyna swoje działanie w punkcie początkowym (tak zwanym korzeniu) ze wszystkimi danymi treningowymi. Następnie przeszukuje wszystkie zmienne (atrybuty), aby wybrać tę, według której najlepiej dokonać podziału. W każdym węźle (za wyjątkiem punktów końcowych - liści) następuje podział na 2 węzły podrzędne. Selekcja dokonywana jest na podstawie "klarowności" (ang. \textit{purity}) węzłów  podzielonych danych - jeden z nich musi mieć jak największy procent jedynek poszukiwanej danej, drugi jak największą ilość zer. Przykładowy fragment takiego drzewa zobrazowany jest poniżej.
 
 \newpage
 
@@ -420,14 +419,14 @@ Graf po lewej oznacza, jak wielki wpływ miał dany atrybut - przede wszystkim j
 
 W trakcie testów aplikacji otrzymywaliśmy wyniki w okolicach 16-18\% albumów dobrych jakościowo dla algorytmu drugiego (randomForest) i około 14-15\% dla algorytmu pierwszego (cforest z pakietu "party"). Są to wartości zbliżone do proporcji z zestawu treningowego. Należy jednak zaznaczyć, że w przypadku pierwszego algorytmu pamięć przydzielona przez R.NET została wyczerpana i niemożliwe było dokończenie obliczeń. Z tego powodu, predykcja za pomocą funkcji cforest była jedynie na połowie zestawu treningowego (około 20000 wierszy). \\
 
-W trakcie testów zmieniano ilość podawanych atrybutów podawanych w formule. Okazało się, że najlepsze wyniki uzyskuje się wykorzystując wszystkie z nich - algorytm lasów sam dobiera sobie, które są dla niego atrakcyjniesze, a mniej ważne są rzadziej używane. W naszym przypadku było to w sumie 11 kolumn: długość i szerokość geograficzna, kontynent, wysokość i szerokość zdjęcia, proporcje, przekątna, ilość zdjęć w albumie oraz długość (w słowach) nazwy, opisu i podpisu albumu. Pomijając formułe, ważne znaczenie miały 2 parametry:
+W trakcie testów zmieniano ilość podawanych atrybutów podawanych w formule. Okazało się, że najlepsze wyniki uzyskuje się wykorzystując wszystkie z nich - algorytm lasów sam dobiera sobie, które są dla niego atrakcyjniesze, a mniej ważne są rzadziej używane. W naszym przypadku było to w sumie 11 kolumn: długość i szerokość geograficzna, kontynent, wysokość i szerokość zdjęcia, proporcje, przekątna, ilość zdjęć w albumie oraz długość (w słowach) nazwy, opisu i podpisu albumu. Pomijając formułę, ważne znaczenie miały 2 parametry:
 
 \begin{itemize}
-	\item \textbf{mtry} - określa, ile atrybutów z kolumny będzie losowanych podczas tworzenia lasu.
+	\item \textbf{mtry} - określa, ile atrybutów z kolumn będzie losowanych podczas tworzenia lasu.
 	\item \textbf{ntree} - ilość drzew w lesie.
 \end{itemize}
 
-Szybko okazało się, że najlepszą wartością dla parametru mtry jest ta domyślna - pierwiastek kwadratowy z 11, co po obliczeniu sufituu dawało 4 losowe atrybuty spośród wszystkich 11. Mniejsza ilość sprawiała, że predykcja była niezbyt dokładna, natomiast większa powodowała zjawisko podobne do overfittingu. Nieco inaczej sytuacja wyglądała w przypadku ilości drzew, gdzie nie udało się stwierdzić aż takiej zależności.  Przy bardzo małych wartościach (np. mniej niż liczba losowanych atrybutów) wyniki były niezbyt dokładne, już przy 10 stabilizowały się na pewnym poziomie, natomiast po osiągnięciu pewnego pułapu (więcej niż 200 drzew) nie różnice stawały się niezauważalne (trzeci rząd po przecinku). Wybór ilości drzew oddaliśmy do dsypozycji użytkownikowi aplikacji.\\
+Szybko okazało się, że najlepszą wartością dla parametru mtry jest ta domyślna - pierwiastek kwadratowy z 11, co po obliczeniu sufituu dawało 4 losowe atrybuty spośród wszystkich 11. Mniejsza ilość sprawiała, że predykcja była niezbyt dokładna, natomiast większa powodowała zjawisko podobne do overfittingu. Nieco inaczej sytuacja wyglądała w przypadku ilości drzew, gdzie nie udało się stwierdzić aż takiej zależności.  Przy bardzo małych wartościach (np. mniej niż liczba losowanych atrybutów) wyniki były niezbyt dokładne, już przy 10 stabilizowały się na pewnym poziomie, natomiast po osiągnięciu pewnego pułapu (od około 200 drzew w górę) różnice stawały się niezauważalne (trzeci rząd po przecinku). Wybór ilości drzew oddaliśmy do dyspozycji użytkownikowi aplikacji.\\
 
 W międzyczasie próbowaliśmy zrealizować zadanie poprzez użycie sieci neuronowych (pakiet "neuralnet"), co jednak się nie udało - małe sieci po długim czasie wykonywania (około 5-10 minut) dawały niezadowalające wyniki, natomiast te bardziej rozbudowane wykonywały się ponad 2 godziny (dokładny czas nieznany). Po sprawdzeniu tendencji na stronie kaggle.com okazało się, że do zadań podobnych do naszego sieci neuronowe są stosunkowo rzadko wykorzystywane.\\
 
